# addr_of_enum

./: Cargo.toml  README.md  lib.rs
macro/: Cargo.toml  lib.rs
tests/: test.rs
