[package]
name = "enum_offset_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.3.1"
proc-macro-error = "1.0"
derive-syn-parse = "0.1.5"

[dependencies.syn]
version = "1.0"
features = [ "full", "derive", "printing", "extra-traits"]
