[package]
name = "addr_of_enum_macro"
version = "0.1.4"
edition = "2021"
description = "macro for addr_of_enum crate"
license = "MIT"
keywords = ["macros"]
categories = ["memory-management"]
repository = "https://github.com/yasuo-ozu/addr_of_enum"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.3.1"
proc-macro-error = "1.0"
derive-syn-parse = "0.1.5"

[dependencies.syn]
version = "1.0"
features = [ "full", "derive", "printing", "extra-traits"]
